chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: go-server
