chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server
spec:
  ingressClassName: nginx
  rules:
    - host: gitops.deerwald.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-server
                port:
                  number: 8080
